# ParakeetNest

./: .env.example  .gitignore  AGENTS.md  README.md  REVIEW.md  pyproject.toml
data/: parakeetnest.sqlite3  watchlist.json
docs/: README.md  clean-machine-validation.md  dependency-boundaries.md  design.md  integration.md  roadmap-v0.3.md  roadmap.md  scheduling.md
docs/adr/: ADR-001-market-data-provider-pattern.md  ADR-002-unified-data-source-architecture.md  ADR-005-stable-committee-personality-architecture.md  ADR-006-committee-owned-investment-judgments.md  README.md
docs/architecture/: ADR-003-investment-intelligence-pattern.md  ADR-004-agent-first-committee-architecture.md  architecture-milestone-review-v1.0.md  architecture-milestone-review-v1.1.md  roadmap-v4.md  (+10 more)
examples/: config-real.toml
reports/: daily-report.md
scripts/: run_parakeetnest_daily.sh
tests/: test_agent_profile_models.py  test_agent_profile_registry.py  test_agent_prompt_builder.py  test_agent_runtime_engine.py  test_agent_runtime_models.py  test_app.py  test_architecture_boundaries.py  test_cli.py  test_committee_agent_runtime.py  test_committee_engine.py  test_committee_meeting_orchestrator.py  test_committee_meetings.py  test_committee_memory_models.py  test_committee_memory_repository.py  test_committee_memory_service.py  test_committee_personas.py  test_committee_prompting.py  test_config.py  test_context_models.py  test_context_provider.py  test_context_provider_registry.py  test_context_rendering.py  test_context_service.py  test_daily_report_cli.py  test_daily_report_delivery.py  test_daily_report_orchestrator.py  test_daily_runtime_script.py  test_data_quality.py  test_database.py  test_doctor_cli.py  test_edgar_sec_filing_provider.py  test_email_service.py  test_financial_statement_context_provider.py  test_financial_statement_models.py  test_financial_statement_provider.py  test_financial_statement_provider_registry.py  test_financial_statement_service.py  test_fred_macro_provider.py  test_gmail_email_provider.py  test_health_calculator.py  (+106 more)
(+336 files in other folders)
