[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "parakeetnest"
version = "0.1.0"
description = "AI investment research committee foundation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
openai = [
    "openai>=1",
]
yahoo = [
    "yfinance>=0.2",
]
robinhood = [
    "robin-stocks>=3",
]
gmail = [
    "google-api-python-client>=2",
    "google-auth>=2",
]

[project.scripts]
parakeetnest = "parakeetnest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
parakeetnest = ["committee/prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
